[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atari-reinforcement-learning"
version = "1.0.0"
description = "A streamlined setup for training and evaluating reinforcement learning agents on Atari 2600 games."
authors = [{ name = "DanielAtCosmicDNA", email = "daniel@cosmicdna.co.uk" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gym==0.26.2",
    "ale-py==0.10.2",
    "gymnasium[atari]",
    "rl-zoo3",
    "torch",
    "opencv-python",
    "tqdm",
    "vtracer"
]

[project.urls]
Homepage = "https://github.com/CosmicDNA/atari-reinforcement-learning"
Repository = "https://github.com/CosmicDNA/atari-reinforcement-learning"

[project.scripts]
atari-rl = "atari_rl.cli:main"